# cc-cost-tracker

./: CLAUDE.md  Makefile  README.md
backend/: Cargo.toml
backend/src/: api.rs  cost.rs  main.rs  models.rs  parser.rs  watcher.rs  ws.rs
frontend/: go.mod  main.go
frontend/handlers/: handlers.go
frontend/templates/: layout.html  overview.html  projects.html  rate-card.html  sessions.html  settings.html
