[package]
name = "cc-cost-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1",   features = ["full"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
notify        = "6"
chrono        = { version = "0.4", features = ["serde"] }
tower-http    = { version = "0.5", features = ["cors"] }
futures       = "0.3"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
